@@ -4,6 +4,8 @@ V0.0.3 (Unreleased):
 * Backport of changes from Debian ITP process review, see
   https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=813096
 * Handle rollover from one logfile to the next more graceful
+* Added support for multiple parallel timescales in component
+  trigger timing, e.g. real-time and forensic-time.
 * Added MissingMatchPathValueDetector to detect when data values
   were not reported for an extended period of time.
 * AMinerRemoteControl: Added "--ExecFile" parameter to execute
